<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="tds">TDS</string>
    <string name="ph">PH</string>
    <string name="temperature">Temperature</string>
    <string name="conductivity">Conductivity</string>
    <string name="turbidity">Turbidity</string>
    <string name="dissolved_oxygen">Dissolved Oxygen</string>
    <string name="obtained_values">Obtained Values</string>
    <string name="todo">TODO</string>
    <string name="drinking">Drinking</string>
    <string name="agriculture">Agriculture</string>
    <string name="aquaculture">Aquaculture</string>
    <string name="industrial">Industrial</string>
    <string name="domestic">Domestic</string>
    <string name="select_the_area_of_testing">Select the area of testing</string>
    <string name="for_drinking">For drinking</string>
    <string name="for_Agriculture" />
    <string name="for_aquarium">for aquarium</string>
    <string name="for_industry">for industry</string>
    <string name="for_washing">for washing</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="water_quality_analyzer">Water Quality Analyzer</string>
    <string name="phone_number">Phone Number</string>
    <string name="td">tds</string>
    <string name="phno">9676858387</string>
    <string name="hlo">hloo</string>
</resources>