<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water"
    android:outlineProvider="none"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0000"
        android:text="@string/submit"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.181" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="478dp"
        android:layout_height="174dp"
        android:contentDescription="@string/todo"
        android:scaleX="2"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:srcCompat="@drawable/c1" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="268dp"
        android:layout_height="52dp"
        android:layout_marginBottom="216dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        app:layout_constraintVertical_bias="0.466" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:layout_marginTop="340dp"
        android:background="@color/white"
        android:hint="@string/name"
        android:isScrollContainer="false"
        android:shadowColor="#000000"
        android:textAlignment="center"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="362dp"
        android:layout_height="141dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/alex_brush"
        android:shadowColor="#000000"
        android:shadowDx="65"
        android:shadowDy="2"
        android:text="@string/water_quality_analyzer"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>