<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0372AA"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="268dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:background="#F4F4F4F4"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#99999999"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:background="#F4F4F4F4"
        android:fadingEdge="vertical"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/name"
        android:isScrollContainer="false"
        android:shadowColor="#000000"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#99999999"
        android:textColorLink="#000000"
        android:textSize="16sp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="362dp"
        android:layout_height="141dp"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="#000000"
        android:shadowDx="65"
        android:shadowDy="2"
        android:text="@string/water_quality_analyzer"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="525dp"
        android:scaleX="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:srcCompat="@android:drawable/progress_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>