<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".for_aqua">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="362dp"
        android:layout_height="141dp"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="#000000"
        android:shadowDx="65"
        android:shadowDy="2"
        android:text="@string/obtained_values"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="362dp"
        android:layout_height="141dp"
        android:fontFamily="@font/poppins_semibold"
        android:shadowColor="#000000"
        android:shadowDx="65"
        android:shadowDy="2"
        android:text="@string/obtained_values"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        tools:ignore="MissingConstraints" />
    <in.unicodelabs.kdgaugeview.KdGaugeView
        android:id="@+id/speedMeter3"
        android:layout_width="200dp"
        android:layout_height="197dp"
        android:layout_gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578"
        app:maxSpeed="2000"
        app:minSpeed="0"
        app:speed_limit="750"
        app:unitOfMeasurement="PPM"
        app:unitOfMeasurementTextSize="17dp"
        app:speedTextSize="60sp"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#88FFFFFF"
        android:backgroundTintMode="add"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#FFFFFF"
        android:text="@string/tds"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <in.unicodelabs.kdgaugeview.KdGaugeView
        android:id="@+id/speedMeter4"
        android:layout_width="200dp"
        android:layout_height="197dp"
        android:layout_gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569"
        app:speedTextColor="@color/white"
        app:maxSpeed="20"
        app:minSpeed="0"
        app:speed_limit="20"
        app:unitOfMeasurement="mg/l"
        app:unitOfMeasurementTextSize="17dp" />

    <in.unicodelabs.kdgaugeview.KdGaugeView
        android:id="@+id/speedMeter5"
        android:layout_width="200dp"
        android:layout_height="197dp"
        android:layout_gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908"
        app:maxSpeed="50"
        app:minSpeed="0"
        app:speed_limit="40"
        app:unitOfMeasurement="Celcius"
        app:unitOfMeasurementTextSize="17dp"
        app:speedTextSize="80sp"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#88FFFFFF"
        android:backgroundTintMode="add"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#FFFFFF"
        android:text="@string/temperature"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <in.unicodelabs.kdgaugeview.KdGaugeView
        android:id="@+id/speedMeter6"
        android:layout_width="200dp"
        android:layout_height="197dp"
        android:layout_gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908"
        app:speedTextColor="@color/white"
        app:maxSpeed="10000"
        app:minSpeed="0"
        app:speed_limit="5000"
        app:unitOfMeasurement="us/cm"
        app:unitOfMeasurementTextSize="17dp" />

    <in.unicodelabs.kdgaugeview.KdGaugeView
        android:id="@+id/speedMeter2"
        android:layout_width="200dp"
        android:layout_height="197dp"
        android:layout_gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        app:maxSpeed="30"
        app:minSpeed="0"
        app:speedTextColor="@color/white"
        app:speed_limit="25"
        app:unitOfMeasurement="NTU"
        app:unitOfMeasurementTextSize="17dp" />

    <TextView
        android:id="@+id/textViewdo"
        android:layout_width="96dp"
        android:layout_height="89dp"

        android:shadowColor="#000000"
        android:shadowDx="65"
        android:shadowDy="2"
        android:text="0.2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585"
        tools:ignore="MissingConstraints" />

    <in.unicodelabs.kdgaugeview.KdGaugeView
        android:id="@+id/speedMeter"
        android:layout_width="200dp"
        android:layout_height="197dp"
        android:layout_gravity="center"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:speedTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        app:maxSpeed="14"
        app:minSpeed="0"
        app:speed_limit="9.5"
        app:unitOfMeasurement="PH" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#88FFFFFF"
        android:backgroundTintMode="add"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#FFFFFF"
        android:text="@string/ph"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#88FFFFFF"
        android:backgroundTintMode="add"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#FFFFFF"
        android:text="@string/conductivity"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#88FFFFFF"
        android:backgroundTintMode="add"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#FFFFFF"
        android:text="@string/turbidity"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="113dp"
        android:layout_height="57dp"
        android:background="#88FFFFFF"
        android:backgroundTintMode="add"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#FFFFFF"
        android:text="@string/dissolved_oxygen"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <TextView
        android:id="@+id/textViewph"
        android:layout_width="87dp"
        android:layout_height="81dp"

        android:shadowColor="#000000"
        android:shadowDx="65"
        android:shadowDy="2"
        android:text="0.02"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewturb"
        android:layout_width="97dp"
        android:layout_height="87dp"

        android:shadowColor="#000000"
        android:shadowDx="65"
        android:shadowDy="2"
        android:text="0.2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewec"
        android:layout_width="87dp"
        android:layout_height="81dp"

        android:shadowColor="#000000"
        android:shadowDx="65"
        android:shadowDy="2"
        android:text="0.02"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>